Fixed cell resizing in firefox when its content is visible.

--- a/content/fMinesweeper.css
+++ b/content/fMinesweeper.css
@@ -65,6 +65,7 @@
     background: #79a8c9;
     text-align: center;
     min-width: 30px;
+    width: 30px; /* hack to stop firefox from resizing cell when the text inside it is visible */
     min-height: 30px;
     display: flex;
     justify-content: center;
